# TradeGod

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  docker-compose.yml
backend/: LICENSE  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 38a2a7ac85e5_create_user_table.py  59126aa48ee8_create_refresh_token_table.py  9c21dfe94dce_rename_hashed_token_to_token_hash.py
backend/src/tradegod/: database.py  logging_config.py  main.py  settings.py
backend/src/tradegod/auth/: crud.py  dependencies.py  exceptions.py  models.py  routes.py  schemas.py  security.py  services.py
backend/src/tradegod/core/: database.py  dependencies.py  error_handlers.py  exceptions.py  schemas.py  security.py  settings.py
backend/src/tradegod/crud/: refresh_token.py  user.py
backend/src/tradegod/middlewares/: request_logging.py
backend/src/tradegod/models/: __init__.py  refresh_token.py  user.py
backend/src/tradegod/routes/: auth.py  users.py
backend/src/tradegod/schemas/: auth.py  user.py
backend/src/tradegod/services/: auth.py  user.py
backend/src/tradegod/users/: crud.py  exceptions.py  models.py  routes.py  schemas.py
diagrams/: auth.md
frontend/: package-lock.json  package.json  proxy.ts
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(protected)/: layout.tsx
frontend/app/register/: page.tsx
frontend/components/ui/: form.tsx
frontend/lib/: error-messages.ts
frontend/lib/api/clients/: auth-client.ts
frontend/lib/auth/: api.ts  client.ts  schemas.ts  types.ts
frontend/lib/auth/components/: LoginForm.tsx  RegisterForm.tsx
frontend/lib/auth/hooks/: useLogin.ts  useRegister.ts
frontend/lib/core/: env.ts  error-codes.ts  error-messages.ts
frontend/lib/core/api/: client.ts
frontend/lib/core/error/: api-error.ts  codes.ts  messages.ts
frontend/lib/users/: api.ts  types.ts
frontend/lib/users/hooks/: useUser.ts
frontend/types/: auth.ts
